fix: fixed things